Fix share buttons being pushed behind video

--- a/scss/components/_videoDetails.scss
+++ b/scss/components/_videoDetails.scss
@@ -25,6 +25,12 @@
         font-size: rem(22px);
         font-weight: bold;
         line-height: rem(32px);
+
+        &::after {
+            display: block;
+            clear: both;
+            content: '';
+        }
     }
 
     &-share {
